CompilerProject/analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO
    dje

Grammar

Rule 0     S' -> funcion
Rule 1     funcion -> FUNCION MAIN PAREN_IZQ PAREN_DER cuerpo
Rule 2     cuerpo -> LLAVE_IZQ lista_declaraciones LLAVE_DER
Rule 3     declaracion -> tocar
Rule 4     declaracion -> declaracion_si
Rule 5     declaracion -> declaracion_mientras
Rule 6     declaracion -> declaracion_para
Rule 7     declaracion -> dec_variable
Rule 8     declaracion -> modificacion_var
Rule 9     declaracion -> expresion PUNTO_COMA
Rule 10    lista_declaraciones -> lista_declaraciones declaracion
Rule 11    lista_declaraciones -> declaracion
Rule 12    declaracion_si -> SI PAREN_IZQ expresion PAREN_DER cuerpo
Rule 13    declaracion_si -> SI PAREN_IZQ expresion PAREN_DER cuerpo SINO cuerpo
Rule 14    declaracion_mientras -> MIENTRAS PAREN_IZQ expresion PAREN_DER cuerpo
Rule 15    declaracion_para -> PARA PAREN_IZQ parametros_para PAREN_DER cuerpo
Rule 16    parametros_para -> dec_asignacion COMA expresion COMA expresion
Rule 17    instrumento -> PIANO
Rule 18    instrumento -> GUITARRA
Rule 19    instrumento -> FLAUTA
Rule 20    numero -> CONSTANTE_ENTERA
Rule 21    numero -> CONSTANTE_FLOTANTE
Rule 22    lista_notas -> lista_notas COMA nota
Rule 23    lista_notas -> nota
Rule 24    nota -> DO
Rule 25    nota -> RE
Rule 26    nota -> MI
Rule 27    nota -> FA
Rule 28    nota -> SOL
Rule 29    nota -> LA
Rule 30    nota -> SI
Rule 31    paren_notas -> PAREN_IZQ lista_notas PAREN_DER
Rule 32    llaves_notas -> LLAVE_IZQ lista_notas LLAVE_DER
Rule 33    elemento -> paren_notas
Rule 34    elemento -> llaves_notas
Rule 35    elemento -> nota
Rule 36    elemento -> ID
Rule 37    tiempo_nota -> numero elemento
Rule 38    tiempo_nota -> numero modificador_nota
Rule 39    elemento_potencia -> tiempo_nota
Rule 40    elemento_potencia -> modificador_nota
Rule 41    elemento_potencia -> elemento
Rule 42    potencia_nota -> elemento_potencia POTENCIA numero
Rule 43    modificador_nota -> MODIFICADOR elemento
Rule 44    tocar -> TOCAR PAREN_IZQ parametros_tocar PAREN_DER cuerpo_tocar
Rule 45    parametros_tocar -> tempo COMA instrumento sincronizacion
Rule 46    tempo -> CONSTANTE_ENTERA
Rule 47    tempo -> ID
Rule 48    sincronizacion -> COMA CONSTANTE_ENTERA
Rule 49    sincronizacion -> COMA CONSTANTE_FLOTANTE
Rule 50    sincronizacion -> COMA ID
Rule 51    sincronizacion -> vacio
Rule 52    cuerpo_tocar -> LLAVE_IZQ lista_tocar LLAVE_DER
Rule 53    lista_tocar -> lista_tocar COMA elemento_tocar
Rule 54    lista_tocar -> elemento_tocar
Rule 55    elemento_tocar -> tiempo_nota
Rule 56    elemento_tocar -> potencia_nota
Rule 57    elemento_tocar -> modificador_nota
Rule 58    elemento_tocar -> elemento
Rule 59    arreglo -> CORCHETE_IZQ lista_arreglos CORCHETE_DER
Rule 60    indice_arreglo -> ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER
Rule 61    lista_arreglos -> lista_arreglos COMA elemento_arreglo
Rule 62    lista_arreglos -> elemento_arreglo
Rule 63    elemento_arreglo -> elemento_tocar
Rule 64    lista_variables -> expresion
Rule 65    lista_variables -> arreglo
Rule 66    tipo_dato -> ENTERO
Rule 67    tipo_dato -> FLOTANTE
Rule 68    tipo_dato -> BOOL
Rule 69    tipo_dato -> NOTA
Rule 70    tipo_var -> ID
Rule 71    tipo_var -> ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER
Rule 72    dec_variable -> dec_asignacion PUNTO_COMA
Rule 73    dec_asignacion -> tipo_dato asignacion
Rule 74    asignacion -> tipo_var ASIGNACION lista_variables
Rule 75    modificacion_var -> asignacion PUNTO_COMA
Rule 76    expresion -> PAREN_IZQ expresion PAREN_DER
Rule 77    expresion -> ID
Rule 78    expresion -> numero
Rule 79    expresion -> BOOLEANO
Rule 80    expresion -> indice_arreglo
Rule 81    expresion -> expresion OPERADOR_LOGICO expresion
Rule 82    expresion -> expresion SUMA expresion
Rule 83    expresion -> expresion RESTA expresion
Rule 84    expresion -> expresion MULTI expresion
Rule 85    expresion -> expresion DIVISION expresion
Rule 86    expresion -> expresion OR expresion
Rule 87    expresion -> expresion AND expresion
Rule 88    expresion -> - expresion
Rule 89    expresion -> expresion POST
Rule 90    expresion -> PRE expresion
Rule 91    vacio -> <empty>

Terminals, with rules where they appear

-                    : 88
AND                  : 87
ASIGNACION           : 74
BOOL                 : 68
BOOLEANO             : 79
COMA                 : 16 16 22 45 48 49 50 53 61
COMENTARIO           : 
CONSTANTE_ENTERA     : 20 46 48 60 71
CONSTANTE_FLOTANTE   : 21 49
CORCHETE_DER         : 59 60 71
CORCHETE_IZQ         : 59 60 71
DIVISION             : 85
DO                   : 24
ENTERO               : 66
FA                   : 27
FLAUTA               : 19
FLOTANTE             : 67
FUNCION              : 1
GUITARRA             : 18
ID                   : 36 47 50 60 70 71 77
LA                   : 29
LLAVE_DER            : 2 32 52
LLAVE_IZQ            : 2 32 52
MAIN                 : 1
MI                   : 26
MIENTRAS             : 14
MODIFICADOR          : 43
MULTI                : 84
NOTA                 : 69
OPERADOR_LOGICO      : 81
OR                   : 86
PARA                 : 15
PAREN_DER            : 1 12 13 14 15 31 44 76
PAREN_IZQ            : 1 12 13 14 15 31 44 76
PIANO                : 17
POST                 : 89
POTENCIA             : 42
PRE                  : 90
PUNTO_COMA           : 9 72 75
RE                   : 25
RESTA                : 83
SI                   : 12 13 30
SINO                 : 13
SOL                  : 28
SUMA                 : 82
TOCAR                : 44
dje                  : 
error                : 

Nonterminals, with rules where they appear

arreglo              : 65
asignacion           : 73 75
cuerpo               : 1 12 13 13 14 15
cuerpo_tocar         : 44
dec_asignacion       : 16 72
dec_variable         : 7
declaracion          : 10 11
declaracion_mientras : 5
declaracion_para     : 6
declaracion_si       : 4
elemento             : 37 41 43 58
elemento_arreglo     : 61 62
elemento_potencia    : 42
elemento_tocar       : 53 54 63
expresion            : 9 12 13 14 16 16 64 76 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 89 90
funcion              : 0
indice_arreglo       : 80
instrumento          : 45
lista_arreglos       : 59 61
lista_declaraciones  : 2 10
lista_notas          : 22 31 32
lista_tocar          : 52 53
lista_variables      : 74
llaves_notas         : 34
modificacion_var     : 8
modificador_nota     : 38 40 57
nota                 : 22 23 35
numero               : 37 38 42 78
parametros_para      : 15
parametros_tocar     : 44
paren_notas          : 33
potencia_nota        : 56
sincronizacion       : 45
tempo                : 45
tiempo_nota          : 39 55
tipo_dato            : 73
tipo_var             : 74
tocar                : 3
vacio                : 51

Parsing method: LALR

state 0

    (0) S' -> . funcion
    (1) funcion -> . FUNCION MAIN PAREN_IZQ PAREN_DER cuerpo

    FUNCION         shift and go to state 2

    funcion                        shift and go to state 1

state 1

    (0) S' -> funcion .



state 2

    (1) funcion -> FUNCION . MAIN PAREN_IZQ PAREN_DER cuerpo

    MAIN            shift and go to state 3


state 3

    (1) funcion -> FUNCION MAIN . PAREN_IZQ PAREN_DER cuerpo

    PAREN_IZQ       shift and go to state 4


state 4

    (1) funcion -> FUNCION MAIN PAREN_IZQ . PAREN_DER cuerpo

    PAREN_DER       shift and go to state 5


state 5

    (1) funcion -> FUNCION MAIN PAREN_IZQ PAREN_DER . cuerpo
    (2) cuerpo -> . LLAVE_IZQ lista_declaraciones LLAVE_DER

    LLAVE_IZQ       shift and go to state 7

    cuerpo                         shift and go to state 6

state 6

    (1) funcion -> FUNCION MAIN PAREN_IZQ PAREN_DER cuerpo .

    $end            reduce using rule 1 (funcion -> FUNCION MAIN PAREN_IZQ PAREN_DER cuerpo .)


state 7

    (2) cuerpo -> LLAVE_IZQ . lista_declaraciones LLAVE_DER
    (10) lista_declaraciones -> . lista_declaraciones declaracion
    (11) lista_declaraciones -> . declaracion
    (3) declaracion -> . tocar
    (4) declaracion -> . declaracion_si
    (5) declaracion -> . declaracion_mientras
    (6) declaracion -> . declaracion_para
    (7) declaracion -> . dec_variable
    (8) declaracion -> . modificacion_var
    (9) declaracion -> . expresion PUNTO_COMA
    (44) tocar -> . TOCAR PAREN_IZQ parametros_tocar PAREN_DER cuerpo_tocar
    (12) declaracion_si -> . SI PAREN_IZQ expresion PAREN_DER cuerpo
    (13) declaracion_si -> . SI PAREN_IZQ expresion PAREN_DER cuerpo SINO cuerpo
    (14) declaracion_mientras -> . MIENTRAS PAREN_IZQ expresion PAREN_DER cuerpo
    (15) declaracion_para -> . PARA PAREN_IZQ parametros_para PAREN_DER cuerpo
    (72) dec_variable -> . dec_asignacion PUNTO_COMA
    (75) modificacion_var -> . asignacion PUNTO_COMA
    (76) expresion -> . PAREN_IZQ expresion PAREN_DER
    (77) expresion -> . ID
    (78) expresion -> . numero
    (79) expresion -> . BOOLEANO
    (80) expresion -> . indice_arreglo
    (81) expresion -> . expresion OPERADOR_LOGICO expresion
    (82) expresion -> . expresion SUMA expresion
    (83) expresion -> . expresion RESTA expresion
    (84) expresion -> . expresion MULTI expresion
    (85) expresion -> . expresion DIVISION expresion
    (86) expresion -> . expresion OR expresion
    (87) expresion -> . expresion AND expresion
    (88) expresion -> . - expresion
    (89) expresion -> . expresion POST
    (90) expresion -> . PRE expresion
    (73) dec_asignacion -> . tipo_dato asignacion
    (74) asignacion -> . tipo_var ASIGNACION lista_variables
    (20) numero -> . CONSTANTE_ENTERA
    (21) numero -> . CONSTANTE_FLOTANTE
    (60) indice_arreglo -> . ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER
    (66) tipo_dato -> . ENTERO
    (67) tipo_dato -> . FLOTANTE
    (68) tipo_dato -> . BOOL
    (69) tipo_dato -> . NOTA
    (70) tipo_var -> . ID
    (71) tipo_var -> . ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER

    TOCAR           shift and go to state 17
    SI              shift and go to state 19
    MIENTRAS        shift and go to state 20
    PARA            shift and go to state 21
    PAREN_IZQ       shift and go to state 18
    ID              shift and go to state 24
    BOOLEANO        shift and go to state 26
    -               shift and go to state 28
    PRE             shift and go to state 29
    CONSTANTE_ENTERA shift and go to state 32
    CONSTANTE_FLOTANTE shift and go to state 33
    ENTERO          shift and go to state 34
    FLOTANTE        shift and go to state 35
    BOOL            shift and go to state 36
    NOTA            shift and go to state 37

    lista_declaraciones            shift and go to state 8
    declaracion                    shift and go to state 9
    tocar                          shift and go to state 10
    declaracion_si                 shift and go to state 11
    declaracion_mientras           shift and go to state 12
    declaracion_para               shift and go to state 13
    dec_variable                   shift and go to state 14
    modificacion_var               shift and go to state 15
    expresion                      shift and go to state 16
    dec_asignacion                 shift and go to state 22
    asignacion                     shift and go to state 23
    numero                         shift and go to state 25
    indice_arreglo                 shift and go to state 27
    tipo_dato                      shift and go to state 30
    tipo_var                       shift and go to state 31

state 8

    (2) cuerpo -> LLAVE_IZQ lista_declaraciones . LLAVE_DER
    (10) lista_declaraciones -> lista_declaraciones . declaracion
    (3) declaracion -> . tocar
    (4) declaracion -> . declaracion_si
    (5) declaracion -> . declaracion_mientras
    (6) declaracion -> . declaracion_para
    (7) declaracion -> . dec_variable
    (8) declaracion -> . modificacion_var
    (9) declaracion -> . expresion PUNTO_COMA
    (44) tocar -> . TOCAR PAREN_IZQ parametros_tocar PAREN_DER cuerpo_tocar
    (12) declaracion_si -> . SI PAREN_IZQ expresion PAREN_DER cuerpo
    (13) declaracion_si -> . SI PAREN_IZQ expresion PAREN_DER cuerpo SINO cuerpo
    (14) declaracion_mientras -> . MIENTRAS PAREN_IZQ expresion PAREN_DER cuerpo
    (15) declaracion_para -> . PARA PAREN_IZQ parametros_para PAREN_DER cuerpo
    (72) dec_variable -> . dec_asignacion PUNTO_COMA
    (75) modificacion_var -> . asignacion PUNTO_COMA
    (76) expresion -> . PAREN_IZQ expresion PAREN_DER
    (77) expresion -> . ID
    (78) expresion -> . numero
    (79) expresion -> . BOOLEANO
    (80) expresion -> . indice_arreglo
    (81) expresion -> . expresion OPERADOR_LOGICO expresion
    (82) expresion -> . expresion SUMA expresion
    (83) expresion -> . expresion RESTA expresion
    (84) expresion -> . expresion MULTI expresion
    (85) expresion -> . expresion DIVISION expresion
    (86) expresion -> . expresion OR expresion
    (87) expresion -> . expresion AND expresion
    (88) expresion -> . - expresion
    (89) expresion -> . expresion POST
    (90) expresion -> . PRE expresion
    (73) dec_asignacion -> . tipo_dato asignacion
    (74) asignacion -> . tipo_var ASIGNACION lista_variables
    (20) numero -> . CONSTANTE_ENTERA
    (21) numero -> . CONSTANTE_FLOTANTE
    (60) indice_arreglo -> . ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER
    (66) tipo_dato -> . ENTERO
    (67) tipo_dato -> . FLOTANTE
    (68) tipo_dato -> . BOOL
    (69) tipo_dato -> . NOTA
    (70) tipo_var -> . ID
    (71) tipo_var -> . ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER

    LLAVE_DER       shift and go to state 38
    TOCAR           shift and go to state 17
    SI              shift and go to state 19
    MIENTRAS        shift and go to state 20
    PARA            shift and go to state 21
    PAREN_IZQ       shift and go to state 18
    ID              shift and go to state 24
    BOOLEANO        shift and go to state 26
    -               shift and go to state 28
    PRE             shift and go to state 29
    CONSTANTE_ENTERA shift and go to state 32
    CONSTANTE_FLOTANTE shift and go to state 33
    ENTERO          shift and go to state 34
    FLOTANTE        shift and go to state 35
    BOOL            shift and go to state 36
    NOTA            shift and go to state 37

    declaracion                    shift and go to state 39
    tocar                          shift and go to state 10
    declaracion_si                 shift and go to state 11
    declaracion_mientras           shift and go to state 12
    declaracion_para               shift and go to state 13
    dec_variable                   shift and go to state 14
    modificacion_var               shift and go to state 15
    expresion                      shift and go to state 16
    dec_asignacion                 shift and go to state 22
    asignacion                     shift and go to state 23
    numero                         shift and go to state 25
    indice_arreglo                 shift and go to state 27
    tipo_dato                      shift and go to state 30
    tipo_var                       shift and go to state 31

state 9

    (11) lista_declaraciones -> declaracion .

    LLAVE_DER       reduce using rule 11 (lista_declaraciones -> declaracion .)
    TOCAR           reduce using rule 11 (lista_declaraciones -> declaracion .)
    SI              reduce using rule 11 (lista_declaraciones -> declaracion .)
    MIENTRAS        reduce using rule 11 (lista_declaraciones -> declaracion .)
    PARA            reduce using rule 11 (lista_declaraciones -> declaracion .)
    PAREN_IZQ       reduce using rule 11 (lista_declaraciones -> declaracion .)
    ID              reduce using rule 11 (lista_declaraciones -> declaracion .)
    BOOLEANO        reduce using rule 11 (lista_declaraciones -> declaracion .)
    -               reduce using rule 11 (lista_declaraciones -> declaracion .)
    PRE             reduce using rule 11 (lista_declaraciones -> declaracion .)
    CONSTANTE_ENTERA reduce using rule 11 (lista_declaraciones -> declaracion .)
    CONSTANTE_FLOTANTE reduce using rule 11 (lista_declaraciones -> declaracion .)
    ENTERO          reduce using rule 11 (lista_declaraciones -> declaracion .)
    FLOTANTE        reduce using rule 11 (lista_declaraciones -> declaracion .)
    BOOL            reduce using rule 11 (lista_declaraciones -> declaracion .)
    NOTA            reduce using rule 11 (lista_declaraciones -> declaracion .)


state 10

    (3) declaracion -> tocar .

    LLAVE_DER       reduce using rule 3 (declaracion -> tocar .)
    TOCAR           reduce using rule 3 (declaracion -> tocar .)
    SI              reduce using rule 3 (declaracion -> tocar .)
    MIENTRAS        reduce using rule 3 (declaracion -> tocar .)
    PARA            reduce using rule 3 (declaracion -> tocar .)
    PAREN_IZQ       reduce using rule 3 (declaracion -> tocar .)
    ID              reduce using rule 3 (declaracion -> tocar .)
    BOOLEANO        reduce using rule 3 (declaracion -> tocar .)
    -               reduce using rule 3 (declaracion -> tocar .)
    PRE             reduce using rule 3 (declaracion -> tocar .)
    CONSTANTE_ENTERA reduce using rule 3 (declaracion -> tocar .)
    CONSTANTE_FLOTANTE reduce using rule 3 (declaracion -> tocar .)
    ENTERO          reduce using rule 3 (declaracion -> tocar .)
    FLOTANTE        reduce using rule 3 (declaracion -> tocar .)
    BOOL            reduce using rule 3 (declaracion -> tocar .)
    NOTA            reduce using rule 3 (declaracion -> tocar .)


state 11

    (4) declaracion -> declaracion_si .

    LLAVE_DER       reduce using rule 4 (declaracion -> declaracion_si .)
    TOCAR           reduce using rule 4 (declaracion -> declaracion_si .)
    SI              reduce using rule 4 (declaracion -> declaracion_si .)
    MIENTRAS        reduce using rule 4 (declaracion -> declaracion_si .)
    PARA            reduce using rule 4 (declaracion -> declaracion_si .)
    PAREN_IZQ       reduce using rule 4 (declaracion -> declaracion_si .)
    ID              reduce using rule 4 (declaracion -> declaracion_si .)
    BOOLEANO        reduce using rule 4 (declaracion -> declaracion_si .)
    -               reduce using rule 4 (declaracion -> declaracion_si .)
    PRE             reduce using rule 4 (declaracion -> declaracion_si .)
    CONSTANTE_ENTERA reduce using rule 4 (declaracion -> declaracion_si .)
    CONSTANTE_FLOTANTE reduce using rule 4 (declaracion -> declaracion_si .)
    ENTERO          reduce using rule 4 (declaracion -> declaracion_si .)
    FLOTANTE        reduce using rule 4 (declaracion -> declaracion_si .)
    BOOL            reduce using rule 4 (declaracion -> declaracion_si .)
    NOTA            reduce using rule 4 (declaracion -> declaracion_si .)


state 12

    (5) declaracion -> declaracion_mientras .

    LLAVE_DER       reduce using rule 5 (declaracion -> declaracion_mientras .)
    TOCAR           reduce using rule 5 (declaracion -> declaracion_mientras .)
    SI              reduce using rule 5 (declaracion -> declaracion_mientras .)
    MIENTRAS        reduce using rule 5 (declaracion -> declaracion_mientras .)
    PARA            reduce using rule 5 (declaracion -> declaracion_mientras .)
    PAREN_IZQ       reduce using rule 5 (declaracion -> declaracion_mientras .)
    ID              reduce using rule 5 (declaracion -> declaracion_mientras .)
    BOOLEANO        reduce using rule 5 (declaracion -> declaracion_mientras .)
    -               reduce using rule 5 (declaracion -> declaracion_mientras .)
    PRE             reduce using rule 5 (declaracion -> declaracion_mientras .)
    CONSTANTE_ENTERA reduce using rule 5 (declaracion -> declaracion_mientras .)
    CONSTANTE_FLOTANTE reduce using rule 5 (declaracion -> declaracion_mientras .)
    ENTERO          reduce using rule 5 (declaracion -> declaracion_mientras .)
    FLOTANTE        reduce using rule 5 (declaracion -> declaracion_mientras .)
    BOOL            reduce using rule 5 (declaracion -> declaracion_mientras .)
    NOTA            reduce using rule 5 (declaracion -> declaracion_mientras .)


state 13

    (6) declaracion -> declaracion_para .

    LLAVE_DER       reduce using rule 6 (declaracion -> declaracion_para .)
    TOCAR           reduce using rule 6 (declaracion -> declaracion_para .)
    SI              reduce using rule 6 (declaracion -> declaracion_para .)
    MIENTRAS        reduce using rule 6 (declaracion -> declaracion_para .)
    PARA            reduce using rule 6 (declaracion -> declaracion_para .)
    PAREN_IZQ       reduce using rule 6 (declaracion -> declaracion_para .)
    ID              reduce using rule 6 (declaracion -> declaracion_para .)
    BOOLEANO        reduce using rule 6 (declaracion -> declaracion_para .)
    -               reduce using rule 6 (declaracion -> declaracion_para .)
    PRE             reduce using rule 6 (declaracion -> declaracion_para .)
    CONSTANTE_ENTERA reduce using rule 6 (declaracion -> declaracion_para .)
    CONSTANTE_FLOTANTE reduce using rule 6 (declaracion -> declaracion_para .)
    ENTERO          reduce using rule 6 (declaracion -> declaracion_para .)
    FLOTANTE        reduce using rule 6 (declaracion -> declaracion_para .)
    BOOL            reduce using rule 6 (declaracion -> declaracion_para .)
    NOTA            reduce using rule 6 (declaracion -> declaracion_para .)


state 14

    (7) declaracion -> dec_variable .

    LLAVE_DER       reduce using rule 7 (declaracion -> dec_variable .)
    TOCAR           reduce using rule 7 (declaracion -> dec_variable .)
    SI              reduce using rule 7 (declaracion -> dec_variable .)
    MIENTRAS        reduce using rule 7 (declaracion -> dec_variable .)
    PARA            reduce using rule 7 (declaracion -> dec_variable .)
    PAREN_IZQ       reduce using rule 7 (declaracion -> dec_variable .)
    ID              reduce using rule 7 (declaracion -> dec_variable .)
    BOOLEANO        reduce using rule 7 (declaracion -> dec_variable .)
    -               reduce using rule 7 (declaracion -> dec_variable .)
    PRE             reduce using rule 7 (declaracion -> dec_variable .)
    CONSTANTE_ENTERA reduce using rule 7 (declaracion -> dec_variable .)
    CONSTANTE_FLOTANTE reduce using rule 7 (declaracion -> dec_variable .)
    ENTERO          reduce using rule 7 (declaracion -> dec_variable .)
    FLOTANTE        reduce using rule 7 (declaracion -> dec_variable .)
    BOOL            reduce using rule 7 (declaracion -> dec_variable .)
    NOTA            reduce using rule 7 (declaracion -> dec_variable .)


state 15

    (8) declaracion -> modificacion_var .

    LLAVE_DER       reduce using rule 8 (declaracion -> modificacion_var .)
    TOCAR           reduce using rule 8 (declaracion -> modificacion_var .)
    SI              reduce using rule 8 (declaracion -> modificacion_var .)
    MIENTRAS        reduce using rule 8 (declaracion -> modificacion_var .)
    PARA            reduce using rule 8 (declaracion -> modificacion_var .)
    PAREN_IZQ       reduce using rule 8 (declaracion -> modificacion_var .)
    ID              reduce using rule 8 (declaracion -> modificacion_var .)
    BOOLEANO        reduce using rule 8 (declaracion -> modificacion_var .)
    -               reduce using rule 8 (declaracion -> modificacion_var .)
    PRE             reduce using rule 8 (declaracion -> modificacion_var .)
    CONSTANTE_ENTERA reduce using rule 8 (declaracion -> modificacion_var .)
    CONSTANTE_FLOTANTE reduce using rule 8 (declaracion -> modificacion_var .)
    ENTERO          reduce using rule 8 (declaracion -> modificacion_var .)
    FLOTANTE        reduce using rule 8 (declaracion -> modificacion_var .)
    BOOL            reduce using rule 8 (declaracion -> modificacion_var .)
    NOTA            reduce using rule 8 (declaracion -> modificacion_var .)


state 16

    (9) declaracion -> expresion . PUNTO_COMA
    (81) expresion -> expresion . OPERADOR_LOGICO expresion
    (82) expresion -> expresion . SUMA expresion
    (83) expresion -> expresion . RESTA expresion
    (84) expresion -> expresion . MULTI expresion
    (85) expresion -> expresion . DIVISION expresion
    (86) expresion -> expresion . OR expresion
    (87) expresion -> expresion . AND expresion
    (89) expresion -> expresion . POST

    PUNTO_COMA      shift and go to state 40
    OPERADOR_LOGICO shift and go to state 41
    SUMA            shift and go to state 42
    RESTA           shift and go to state 43
    MULTI           shift and go to state 44
    DIVISION        shift and go to state 45
    OR              shift and go to state 46
    AND             shift and go to state 47
    POST            shift and go to state 48


state 17

    (44) tocar -> TOCAR . PAREN_IZQ parametros_tocar PAREN_DER cuerpo_tocar

    PAREN_IZQ       shift and go to state 49


state 18

    (76) expresion -> PAREN_IZQ . expresion PAREN_DER
    (76) expresion -> . PAREN_IZQ expresion PAREN_DER
    (77) expresion -> . ID
    (78) expresion -> . numero
    (79) expresion -> . BOOLEANO
    (80) expresion -> . indice_arreglo
    (81) expresion -> . expresion OPERADOR_LOGICO expresion
    (82) expresion -> . expresion SUMA expresion
    (83) expresion -> . expresion RESTA expresion
    (84) expresion -> . expresion MULTI expresion
    (85) expresion -> . expresion DIVISION expresion
    (86) expresion -> . expresion OR expresion
    (87) expresion -> . expresion AND expresion
    (88) expresion -> . - expresion
    (89) expresion -> . expresion POST
    (90) expresion -> . PRE expresion
    (20) numero -> . CONSTANTE_ENTERA
    (21) numero -> . CONSTANTE_FLOTANTE
    (60) indice_arreglo -> . ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER

    PAREN_IZQ       shift and go to state 18
    ID              shift and go to state 51
    BOOLEANO        shift and go to state 26
    -               shift and go to state 28
    PRE             shift and go to state 29
    CONSTANTE_ENTERA shift and go to state 32
    CONSTANTE_FLOTANTE shift and go to state 33

    expresion                      shift and go to state 50
    numero                         shift and go to state 25
    indice_arreglo                 shift and go to state 27

state 19

    (12) declaracion_si -> SI . PAREN_IZQ expresion PAREN_DER cuerpo
    (13) declaracion_si -> SI . PAREN_IZQ expresion PAREN_DER cuerpo SINO cuerpo

    PAREN_IZQ       shift and go to state 52


state 20

    (14) declaracion_mientras -> MIENTRAS . PAREN_IZQ expresion PAREN_DER cuerpo

    PAREN_IZQ       shift and go to state 53


state 21

    (15) declaracion_para -> PARA . PAREN_IZQ parametros_para PAREN_DER cuerpo

    PAREN_IZQ       shift and go to state 54


state 22

    (72) dec_variable -> dec_asignacion . PUNTO_COMA

    PUNTO_COMA      shift and go to state 55


state 23

    (75) modificacion_var -> asignacion . PUNTO_COMA

    PUNTO_COMA      shift and go to state 56


state 24

    (77) expresion -> ID .
    (60) indice_arreglo -> ID . CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER
    (70) tipo_var -> ID .
    (71) tipo_var -> ID . CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER

    PUNTO_COMA      reduce using rule 77 (expresion -> ID .)
    OPERADOR_LOGICO reduce using rule 77 (expresion -> ID .)
    SUMA            reduce using rule 77 (expresion -> ID .)
    RESTA           reduce using rule 77 (expresion -> ID .)
    MULTI           reduce using rule 77 (expresion -> ID .)
    DIVISION        reduce using rule 77 (expresion -> ID .)
    OR              reduce using rule 77 (expresion -> ID .)
    AND             reduce using rule 77 (expresion -> ID .)
    POST            reduce using rule 77 (expresion -> ID .)
    CORCHETE_IZQ    shift and go to state 57
    ASIGNACION      reduce using rule 70 (tipo_var -> ID .)


state 25

    (78) expresion -> numero .

    PUNTO_COMA      reduce using rule 78 (expresion -> numero .)
    OPERADOR_LOGICO reduce using rule 78 (expresion -> numero .)
    SUMA            reduce using rule 78 (expresion -> numero .)
    RESTA           reduce using rule 78 (expresion -> numero .)
    MULTI           reduce using rule 78 (expresion -> numero .)
    DIVISION        reduce using rule 78 (expresion -> numero .)
    OR              reduce using rule 78 (expresion -> numero .)
    AND             reduce using rule 78 (expresion -> numero .)
    POST            reduce using rule 78 (expresion -> numero .)
    PAREN_DER       reduce using rule 78 (expresion -> numero .)
    COMA            reduce using rule 78 (expresion -> numero .)


state 26

    (79) expresion -> BOOLEANO .

    PUNTO_COMA      reduce using rule 79 (expresion -> BOOLEANO .)
    OPERADOR_LOGICO reduce using rule 79 (expresion -> BOOLEANO .)
    SUMA            reduce using rule 79 (expresion -> BOOLEANO .)
    RESTA           reduce using rule 79 (expresion -> BOOLEANO .)
    MULTI           reduce using rule 79 (expresion -> BOOLEANO .)
    DIVISION        reduce using rule 79 (expresion -> BOOLEANO .)
    OR              reduce using rule 79 (expresion -> BOOLEANO .)
    AND             reduce using rule 79 (expresion -> BOOLEANO .)
    POST            reduce using rule 79 (expresion -> BOOLEANO .)
    PAREN_DER       reduce using rule 79 (expresion -> BOOLEANO .)
    COMA            reduce using rule 79 (expresion -> BOOLEANO .)


state 27

    (80) expresion -> indice_arreglo .

    PUNTO_COMA      reduce using rule 80 (expresion -> indice_arreglo .)
    OPERADOR_LOGICO reduce using rule 80 (expresion -> indice_arreglo .)
    SUMA            reduce using rule 80 (expresion -> indice_arreglo .)
    RESTA           reduce using rule 80 (expresion -> indice_arreglo .)
    MULTI           reduce using rule 80 (expresion -> indice_arreglo .)
    DIVISION        reduce using rule 80 (expresion -> indice_arreglo .)
    OR              reduce using rule 80 (expresion -> indice_arreglo .)
    AND             reduce using rule 80 (expresion -> indice_arreglo .)
    POST            reduce using rule 80 (expresion -> indice_arreglo .)
    PAREN_DER       reduce using rule 80 (expresion -> indice_arreglo .)
    COMA            reduce using rule 80 (expresion -> indice_arreglo .)


state 28

    (88) expresion -> - . expresion
    (76) expresion -> . PAREN_IZQ expresion PAREN_DER
    (77) expresion -> . ID
    (78) expresion -> . numero
    (79) expresion -> . BOOLEANO
    (80) expresion -> . indice_arreglo
    (81) expresion -> . expresion OPERADOR_LOGICO expresion
    (82) expresion -> . expresion SUMA expresion
    (83) expresion -> . expresion RESTA expresion
    (84) expresion -> . expresion MULTI expresion
    (85) expresion -> . expresion DIVISION expresion
    (86) expresion -> . expresion OR expresion
    (87) expresion -> . expresion AND expresion
    (88) expresion -> . - expresion
    (89) expresion -> . expresion POST
    (90) expresion -> . PRE expresion
    (20) numero -> . CONSTANTE_ENTERA
    (21) numero -> . CONSTANTE_FLOTANTE
    (60) indice_arreglo -> . ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER

    PAREN_IZQ       shift and go to state 18
    ID              shift and go to state 51
    BOOLEANO        shift and go to state 26
    -               shift and go to state 28
    PRE             shift and go to state 29
    CONSTANTE_ENTERA shift and go to state 32
    CONSTANTE_FLOTANTE shift and go to state 33

    expresion                      shift and go to state 58
    numero                         shift and go to state 25
    indice_arreglo                 shift and go to state 27

state 29
